tests/cases/operators/errors/invalid-cast.ari
fn main() -> i64 {
  let value = true as i64;
  return value;
}
